--- a/dictionary.html
+++ b/dictionary.html
@@ -1,20 +1,44 @@
 <!DOCTYPE HTML>
-<html>
+<html lang = "en">
 <head>
+<meta charset = "utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>toki pona dictionary</title>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class = "grid-container">
 
-        <div class="header">rename this but info about each word goes here.</div>
-        <div class="menu">words go here with a scroll bar.</div>
+        <div class="jumbotron text-center">
+            <h1>toki pona dictionary</h1>
+        </div>
 
-
-
-    </div>
-
+        <div class="row">
+            <div class = "col-sm-2">
+                <div class="btn-group-vertical" id  = "menu">
+                    <button type="button" class="btn btn-primary">a</button>
+                    <button type="button" class="btn btn-primary">pu</button>
+                    <button type="button" class="btn btn-primary">kulupu</button>
+                    <!--work on javascript next, you want to generate buttons based on a list of words then when button is clicked check what number it is and display corrisponding info about the word.-->
+                  </div> 
+            </div>
+            <div class = "col-sm-8">
+                <div class = "row">
+                    <div class = "col-sm-4">
+                        1
+                    </div>
+                    <div class = "col-sm-4">
+                        2
+                    </div>
+                    <div class = "col-sm-4">
+                        3
+                    </div>
+                </div>
+            </div>
+        </div>
  
 
 </body>
