--- a/dictionary.html
+++ b/dictionary.html
@@ -4,9 +4,11 @@
 <meta charset = "utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>toki pona dictionary</title>
-
+<nav>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
+</nav>
 </head>
 
 <body>
@@ -18,22 +20,19 @@
 
         <div class="row">
             <div class = "col-sm-2">
-                <div class="btn-group-vertical" id  = "menu">
-                    <button type="button" class="btn btn-primary">a</button>
-                    <button type="button" class="btn btn-primary">pu</button>
-                    <button type="button" class="btn btn-primary">kulupu</button>
+                <div class="btn-group-vertical" id  = "menu">                    
                     <!--work on javascript next, you want to generate buttons based on a list of words then when button is clicked check what number it is and display corrisponding info about the word.-->
                   </div> 
             </div>
             <div class = "col-sm-8">
                 <div class = "row">
-                    <div class = "col-sm-4">
+                    <div class = "col-sm-4" id = "word">
                         1
                     </div>
-                    <div class = "col-sm-4">
+                    <div class = "col-sm-4" id = "description">
                         2
                     </div>
-                    <div class = "col-sm-4">
+                    <div class = "col-sm-4" id = "picture">
                         3
                     </div>
                 </div>
