--- a/dictionary.html
+++ b/dictionary.html
@@ -6,6 +6,9 @@
 <title>toki pona dictionary</title>
 <nav>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 </nav>
@@ -40,6 +43,12 @@
             </div>
         </div>
  
+
+<script>
+    window.onload = function(){
+    fillmenu(words);
+    };
+</script>
 
 </body>
 
