--- a/flashcard.html
+++ b/flashcard.html
@@ -21,7 +21,7 @@
         somewhere here link to the dictionary.
 
                 <div class="panel panel-default">
-                    <div class="panel-body" id = "flashcard">
+                    <div class="panel-body" id = "flashcard" data-CurrWord="a" data-IsFlipped = "false" data-CurrLesson = "">
                         <div class = "grid-container">
                             <div class = "row">
                                 <div class = "col-sm-4" id = "top-left">top left</div>
