basic implementation of flashcards started and added links between the pages and to my github

--- a/dictionary.html
+++ b/dictionary.html
@@ -19,6 +19,8 @@
 
         <div class="jumbotron text-center">
             <h1>toki pona dictionary</h1>
+            <a href="flashcard.html" class="link-primary">Flashcard</a>
+            <a href="dictionary.html" class="link-secondary">Dictionary</a>
         </div>
 
         <div class="row">
@@ -43,7 +45,7 @@
             </div>
         </div>
  
-
+<p>by <a href="https://github.com/jackklassen" class="link-info">jan sakekasan</a></p>
 <script>
     window.onload = function(){
     fillmenu(words);
