--- a/flashcard.html
+++ b/flashcard.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>toki pona flashcards</title>
 <nav>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -17,6 +18,8 @@
 <body>
         <div class="jumbotron text-center">
             <h1>toki pona flashcards</h1>
+            <a href="flashcard.html" class="link-secondary">Flashcard</a>
+            <a href="dictionary.html" class="link-primary">Dictionary</a>
         </div>
         somewhere here link to the dictionary.
 
@@ -38,8 +41,8 @@
 
                     </div>
                   </div>
-       
-     
+       <button id = "1" onclick = "startlesson(1)">lesson 1</button>
+       <p>by <a href="https://github.com/jackklassen" class="link-info">jan sakekasan</a></p>
 </body>
 
 
