fixed displaying descriptions for the flashcards

--- a/flashcard.html
+++ b/flashcard.html
@@ -24,12 +24,12 @@
         somewhere here link to the dictionary.
 
                 <div class="panel panel-default">
-                    <div class="panel-body" id = "flashcard" data-CurrWord="a" data-IsFlipped = "false" data-CurrLesson = "" onclick = "checkflashcard()">
+                    <div class="panel-body" id = "flashcard" data-CurrWord="" data-IsFlipped = "false" data-CurrLesson = "" onclick = "checkflashcard()">
                         <div class = "grid-container">
                             <div class = "row">
-                                <div class = "col-sm-4" id = "top-left">top left</div>
+                                <div class = "col-sm-4" id = "top-left"></div>
                                 <div class = "col-sm-4" id = "top-mid">top mid</div>
-                                <div class = "col-sm-4" id = "top-right">top right</div>
+                                <div class = "col-sm-4" id = "top-right"></div>
                             </div>
                             <div class = "row">
                                 <div class = "col-sm-4" id = "bot-left">bot left</div>
